--- a/index.html
+++ b/index.html
@@ -1,118 +1,131 @@
 <!DOCTYPE html>
-<html lang="th">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🎙️ AI Speak Practice</title>
-  <style>
-    body {
-      font-family: "Segoe UI", sans-serif;
-      margin: 30px;
-      background: #f9f9f9;
-      text-align: center;
-    }
-    h1 {
-      color: #222;
-    }
-    button {
-      padding: 10px 20px;
-      margin: 5px;
-      border-radius: 6px;
-      border: none;
-      background: #007bff;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    button:disabled {
-      background: gray;
-    }
-    #scoreDiv {
-      margin-top: 20px;
-      font-size: 18px;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>🎧 AI Speak Practice</title>
+<style>
+  body { font-family: sans-serif; text-align: center; padding: 20px; background: #f9fafc; }
+  h1 { margin-bottom: 10px; }
+  button { margin: 5px; padding: 10px 20px; font-size: 16px; border-radius: 8px; border: none; cursor: pointer; }
+  #score { font-size: 22px; margin-top: 15px; font-weight: bold; }
+  .sentence { margin: 15px auto; font-size: 20px; background: #fff; border-radius: 8px; padding: 10px; width: 90%; max-width: 500px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+  #addSentence { margin-top: 20px; }
+  input { padding: 8px; width: 70%; border-radius: 6px; border: 1px solid #ccc; font-size: 16px; }
+</style>
 </head>
 <body>
-  <h1>🎧 AI Speak Practice</h1>
-  <p>เพิ่มประโยคที่คุณอยากฝึก แล้วพูดตามเพื่อรับคะแนน!</p>
+<h1>🎧 AI Speak Practice</h1>
+<p>เพิ่มประโยคที่คุณอยากฝึก แล้วพูดตามเพื่อรับคะแนน!</p>
 
-  <div>
-    <p><b>1. My favorite country is South Korea.</b></p>
-    <button onclick="playTTS('My favorite country is South Korea')">🔊 Listen</button>
-  </div>
-  <div>
-    <p><b>2. I like listening to K-pop songs.</b></p>
-    <button onclick="playTTS('I like listening to K-pop songs')">🔊 Listen</button>
-  </div>
-  <div>
-    <p><b>3. I will travel to Seoul next year.</b></p>
-    <button onclick="playTTS('I will travel to Seoul next year')">🔊 Listen</button>
-  </div>
+<div id="sentences"></div>
 
-  <br />
-  <button id="startBtn">🎙️ Start Recording</button>
-  <button id="stopBtn" disabled>⏹ Stop</button>
+<div id="addSentence">
+  <input id="newSentence" placeholder="พิมพ์ประโยคภาษาอังกฤษที่นี่..." />
+  <button id="addBtn">➕ เพิ่มประโยค</button>
+</div>
 
-  <p id="scoreDiv"></p>
-  <audio id="audioPlayer" controls style="margin-top:20px; display:none;"></audio>
+<button id="startBtn">🎙️ Start Recording</button>
+<button id="stopBtn" disabled>⏹️ Stop</button>
 
-  <script>
-    let mediaRecorder;
-    let audioChunks = [];
-    const startBtn = document.getElementById("startBtn");
-    const stopBtn = document.getElementById("stopBtn");
-    const scoreDiv = document.getElementById("scoreDiv");
-    const audioPlayer = document.getElementById("audioPlayer");
+<div id="score"></div>
 
-    // 🔴 เริ่มอัดเสียง
-    startBtn.onclick = async () => {
-      try {
-        const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-        mediaRecorder = new MediaRecorder(stream);
-        audioChunks = [];
+<script>
+let sentences = [
+  "My favorite country is South Korea.",
+  "I like listening to K-pop songs.",
+  "I will travel to Seoul next year."
+];
+let currentSentenceIndex = 0;
 
-        mediaRecorder.ondataavailable = e => {
-          if (e.data.size > 0) {
-            audioChunks.push(e.data);
-          }
-        };
+const container = document.getElementById('sentences');
+const startBtn = document.getElementById("startBtn");
+const stopBtn = document.getElementById("stopBtn");
+const scoreDiv = document.getElementById("score");
 
-        mediaRecorder.start();
-        startBtn.disabled = true;
-        stopBtn.disabled = false;
-        scoreDiv.textContent = "🎙️ Recording...";
-      } catch (err) {
-        alert("⚠️ ไม่สามารถเข้าถึงไมโครโฟนได้ โปรดตรวจสอบการอนุญาต");
-        console.error(err);
-      }
+function renderSentences() {
+  container.innerHTML = "";
+  sentences.forEach((txt, i) => {
+    const div = document.createElement('div');
+    div.className = 'sentence';
+    div.innerHTML = `
+      <b>${i + 1}. ${txt}</b><br>
+      <button onclick="playTTS('${txt.replace(/'/g, "\\'")}')">🔊 Listen</button>
+      <button onclick="selectSentence(${i})">🎯 Choose</button>
+    `;
+    if (i === currentSentenceIndex) div.style.border = "2px solid #007bff";
+    container.appendChild(div);
+  });
+}
+
+window.selectSentence = (index) => {
+  currentSentenceIndex = index;
+  renderSentences();
+  scoreDiv.textContent = `Selected: "${sentences[index]}"`;
+};
+
+document.getElementById("addBtn").onclick = () => {
+  const newTxt = document.getElementById("newSentence").value.trim();
+  if (!newTxt) return alert("กรุณาพิมพ์ประโยคก่อนค่ะ");
+  sentences.push(newTxt);
+  document.getElementById("newSentence").value = "";
+  renderSentences();
+};
+
+renderSentences();
+
+// 🎙️ ฟังก์ชันอัดเสียง
+let mediaRecorder;
+let audioChunks = [];
+
+startBtn.onclick = async () => {
+  try {
+    const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+    mediaRecorder = new MediaRecorder(stream);
+    audioChunks = [];
+
+    mediaRecorder.ondataavailable = e => audioChunks.push(e.data);
+    mediaRecorder.onstop = async () => {
+      const blob = new Blob(audioChunks, { type: 'audio/webm' });
+      const url = URL.createObjectURL(blob);
+
+      // แสดงเสียงที่อัด
+      const audio = document.createElement("audio");
+      audio.controls = true;
+      audio.src = url;
+      scoreDiv.appendChild(audio);
+
+      const currentSentence = sentences[currentSentenceIndex];
+      scoreDiv.innerHTML = `⭐ You said: "${currentSentence}" (Demo mode)<br>`;
+      scoreDiv.appendChild(audio);
     };
 
-    // 🟢 หยุดอัดเสียง
-    stopBtn.onclick = () => {
-      mediaRecorder.stop();
-      startBtn.disabled = false;
-      stopBtn.disabled = true;
-      scoreDiv.textContent = "⏳ Processing...";
+    mediaRecorder.start();
+    scoreDiv.textContent = "Recording...";
+    startBtn.disabled = true;
+    stopBtn.disabled = false;
+  } catch (err) {
+    alert("กรุณาอนุญาตให้ใช้ไมโครโฟนในเบราว์เซอร์");
+    console.error(err);
+  }
+};
 
-      mediaRecorder.onstop = () => {
-        const audioBlob = new Blob(audioChunks, { type: "audio/mp3" });
-        const audioUrl = URL.createObjectURL(audioBlob);
-        audioPlayer.src = audioUrl;
-        audioPlayer.style.display = "block";
-        audioPlayer.load();
-        scoreDiv.textContent = "⭐ You said: 'My favorite country is South Korea.' (Demo mode)";
-      };
-    };
+stopBtn.onclick = () => {
+  if (mediaRecorder && mediaRecorder.state !== "inactive") {
+    mediaRecorder.stop();
+    startBtn.disabled = false;
+    stopBtn.disabled = true;
+  }
+};
 
-    // 🗣️ Text-to-Speech (ใช้เสียงจากเบราว์เซอร์)
-    async function playTTS(text) {
-      const utterance = new SpeechSynthesisUtterance(text);
-      utterance.lang = "en-US"; // 🇺🇸 เปลี่ยนเป็นสำเนียงอื่นได้ เช่น "ko-KR"
-      utterance.rate = 1;
-      utterance.pitch = 1;
-      speechSynthesis.speak(utterance);
-    }
-  </script>
+// ✅ ใช้เสียงจากเบราว์เซอร์ (ไม่ต้องใช้ API)
+async function playTTS(text) {
+  const utterance = new SpeechSynthesisUtterance(text);
+  utterance.lang = "en-US"; // 🇺🇸 เปลี่ยนเป็น "ko-KR" ถ้าอยากได้สำเนียงเกาหลี
+  utterance.rate = 1;
+  utterance.pitch = 1;
+  speechSynthesis.speak(utterance);
+}
+</script>
 </body>
 </html>
