--- a/index.html
+++ b/index.html
@@ -1,177 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🎧 AI Speak Practice</title>
-<style>
-body {
-  font-family: 'Arial', sans-serif;
-  text-align: center;
-  padding: 20px;
-  background: #f7f9fc;
+export default function Home() {
+  return (
+    <div>
+      <h2>🎤 AI ตรวจการออกเสียง</h2>
+      <button id="startBtn">🎙️ Start</button>
+      <button id="stopBtn" disabled>⏹️ Stop</button>
+      <audio id="playback" controls></audio>
+      <div id="scoreDiv"></div>
+
+      {/* ✅ เรียกใช้ไฟล์ main.js จากโฟลเดอร์ public */}
+      <script src="/main.js"></script>
+    </div>
+  );
 }
-h1 { margin-bottom: 10px; }
-button {
-  margin: 5px;
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 8px;
-  border: none;
-  cursor: pointer;
-}
-#score { font-size: 18px; margin-top: 15px; font-weight: bold; }
-audio { margin-top: 15px; }
-.sentence {
-  margin: 15px auto;
-  font-size: 20px;
-  background: #fff;
-  border-radius: 8px;
-  padding: 10px;
-  width: 90%;
-  max-width: 500px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
-#addSentence { margin-top: 20px; }
-input {
-  padding: 8px;
-  width: 70%;
-  border-radius: 6px;
-  border: 1px solid #ccc;
-  font-size: 16px;
-}
-</style>
-</head>
-
-<body>
-<h1>🎧 AI Speak Practice</h1>
-<p>เพิ่มประโยคที่คุณอยากฝึก แล้วพูดตามเพื่อรับคะแนน!</p>
-
-<div id="sentences"></div>
-
-<div id="addSentence">
-  <input id="newSentence" placeholder="พิมพ์ประโยคภาษาอังกฤษที่นี่..." />
-  <button id="addBtn">➕ เพิ่มประโยค</button>
-</div>
-
-<br />
-<button id="startBtn">🎙️ Start Recording</button>
-<button id="stopBtn" disabled>⏹️ Stop</button>
-
-<div id="score"></div>
-<audio id="playback" controls></audio>
-
-<script>
-let sentences = [
-  "My favorite country is South Korea.",
-  "I like listening to K-pop songs.",
-  "I will travel to Seoul next year."
-];
-let currentSentenceIndex = 0;
-
-const container = document.getElementById('sentences');
-const startBtn = document.getElementById("startBtn");
-const stopBtn = document.getElementById("stopBtn");
-const scoreDiv = document.getElementById("score");
-const playback = document.getElementById("playback");
-
-function renderSentences() {
-  container.innerHTML = "";
-  sentences.forEach((txt, i) => {
-    const div = document.createElement('div');
-    div.className = 'sentence';
-    div.innerHTML = `
-      <b>${i+1}. ${txt}</b><br>
-      <button onclick="playTTS('${txt.replace(/'/g, "\\'")}')">🔊 Listen</button>
-      <button onclick="selectSentence(${i})">🎯 Choose</button>
-    `;
-    if (i === currentSentenceIndex) div.style.border = "2px solid #007bff";
-    container.appendChild(div);
-  });
-}
-
-window.selectSentence = (index) => {
-  currentSentenceIndex = index;
-  renderSentences();
-  scoreDiv.textContent = `Selected: "${sentences[index]}"`;
-};
-
-document.getElementById("addBtn").onclick = () => {
-  const newTxt = document.getElementById("newSentence").value.trim();
-  if (!newTxt) return alert("กรุณาพิมพ์ประโยคก่อนค่ะ");
-  sentences.push(newTxt);
-  document.getElementById("newSentence").value = "";
-  renderSentences();
-};
-
-renderSentences();
-
-let mediaRecorder;
-let audioChunks = [];
-
-async function initMic() {
-  try {
-    const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-    mediaRecorder = new MediaRecorder(stream);
-    audioChunks = [];
-
-    mediaRecorder.ondataavailable = (e) => audioChunks.push(e.data);
-
-    mediaRecorder.onstop = async () => {
-      const blob = new Blob(audioChunks, { type: 'audio/webm' });
-      playback.src = URL.createObjectURL(blob);
-
-      // แปลงเสียงเป็น Base64 เพื่อส่งไป API
-      const base64Audio = await toBase64(blob);
-      const response = await fetch("/api/check-pronunciation", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          file: base64Audio.split(",")[1],
-          reference: sentences[currentSentenceIndex]
-        })
-      });
-
-      const result = await response.json();
-      scoreDiv.innerHTML = `⭐ Pronunciation Result:<br>${result.result}`;
-    };
-  } catch (err) {
-    alert("❗ กรุณาอนุญาตให้ใช้ไมโครโฟน");
-    console.error(err);
-  }
-}
-
-function toBase64(blob) {
-  return new Promise((resolve, reject) => {
-    const reader = new FileReader();
-    reader.onloadend = () => resolve(reader.result);
-    reader.onerror = reject;
-    reader.readAsDataURL(blob);
-  });
-}
-
-startBtn.onclick = async () => {
-  await initMic();
-  mediaRecorder.start();
-  startBtn.disabled = true;
-  stopBtn.disabled = false;
-  scoreDiv.textContent = "Recording...";
-};
-
-stopBtn.onclick = () => {
-  mediaRecorder.stop();
-  startBtn.disabled = false;
-  stopBtn.disabled = true;
-};
-
-// ✅ ใช้เสียงจากเบราว์เซอร์ (Text-to-Speech)
-async function playTTS(text) {
-  const utterance = new SpeechSynthesisUtterance(text);
-  utterance.lang = "en-US"; // 🇺🇸 เปลี่ยนเป็น "ko-KR" ได้
-  utterance.rate = 1;
-  utterance.pitch = 1;
-  speechSynthesis.speak(utterance);
-}
-</script>
-</body>
-</html>
